<resources>
    <string name="app_name">Senorita</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="best_offers">Best Offers</string>
    <string name="intro_1_text">Get best offers you wouldn\'t\nfound anywhere else</string>
    <string name="miss_offer">Don\'t miss the offer</string>
    <string name="discounts">True discounts</string>
    <string name="intro_2_text">Push notification for important offers\nfrom your favorite places</string>
    <string name="intro_3_text">You can get true discounts\nfrom the Application</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="register_now">Don\'t Have Account?<font color="#89182C">Register Now</font></string>
    <string name="registration">Registration</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_coditions">By Clicking Register you accept\nTerms and Conditinos</string>
    <string name="register">Register</string>
    <string name="have_account">Do you have Account?<font color="#89182C">Login Now</font></string>
    <string name="test_name">Moaaz Mohsen</string>
    <string name="departments">Categories</string>
    <string name="my_reservations">My Reservations</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="share_application">Share Application</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="call_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="test_notification">There is fact authorised from long time ago</string>
    <string name="save">Save</string>
    <string name="new_notification">New Notification</string>
    <string name="logout">Logout</string>
    <string name="more">More</string>
    <string name="featured_offers">Featured Offers</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="department">Department</string>
    <string name="location">Location</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="promo_code">Promo code</string>
    <string name="reserve_now">Reserve Now</string>
    <string name="reservations">Reservations</string>
    <string name="reservation_number">Reservation Number</string>
    <string name="rating">Rating</string>
    <string name="reservation_confirmed">Reservation Confirmed</string>
    <string name="offers">Offers</string>
    <string name="add_provider_request">Add Provider Request</string>
    <string name="provider_name">Provider Name</string>
    <string name="address_and_information_of_provider">Address and Information of Provider</string>
    <string name="add_request">Add Request</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_phone">Enter Your Phone Number</string>
    <string name="enter_message">Enter Message</string>
    <string name="success">Success</string>
    <string name="error">Error Please try again</string>
    <string name="email_not_valid">Email is not Valid</string>
    <string name="phone_not_valid">Phone shouldn\'t be empty and 10 numbers</string>
    <string name="password_not_valid">Password shouldn\'t be empty and more than 6 chars</string>
    <string name="password_match_error">Passwords not match</string>
    <string name="please_login">Please Login</string>
    <string name="waiting_confirmation">Waiting Confirmation</string>
    <string name="confirmed">Confirmed</string>
    <string name="visit_completed">Visit Completed</string>
    <string name="visit_not_completed">Visit Not Completed</string>
    <string name="canceled">Canceled</string>
    <string name="no_notifications">No Notifications</string>
    <string name="no_reservations">No Reservations</string>
    <string name="edited">Edited Successfully</string>
    <string name="no_offers">No Offers</string>
    <string name="add_clinic">Add Clinic</string>
    <string name="enter_provider_name">Enter Provider Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_provider_phne">Enter Provider Phone Number</string>
    <string name="no_favorites">No Favorites</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="code_not_valid">Code is not valid</string>
    <string name="enter_code">Enter the code</string>
    <string name="not_verified">Not Verified</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="enter_review">Enter Review</string>
    <string name="rate_valid">Rating must be 1 star at least</string>
    <string name="your_rate">Your Rate</string>
    <string name="what_is_your_rate">What is your rate?</string>
    <string name="leave_comment">Leave Comment</string>
    <string name="rate">Rate</string>
    <string name="change_password">Change Password</string>
    <string name="one_filter">Select one filter at least</string>
    <string name="facebook_app_id" translatable="false">260051308353109</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb260051308353109</string>
    <string name="test_email" translatable="false">abdelrahman@gmail.com</string>
    <string name="test_phone" translatable="false">+20156984257</string>
    <string name="vip_member" translatable="false">VIP member</string>
    <string name="exchange_points">Exchange Points</string>
    <string name="more_categories">More Categories</string>
    <string name="more_offers">More Offers</string>
    <string name="share_offer">Share Offer</string>
    <string name="book_offer">Book Offer</string>
    <string name="offer_number">Offer Number</string>
    <string name="filter_search_results">Filter Search Results</string>
    <string name="provider_search">Search by Provider</string>
    <string name="search_by_category">Search by Category</string>
    <string name="search_by_offer_number">Search by Offer Number</string>
    <string name="search_offer_number">Enter Offer Number</string>
    <string name="search_for_offer">Search for Offer</string>
    <string name="search_for_offers">Search for Offers</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_provider">Choose Provider</string>
    <string name="show_provider">Show Provider</string>
    <string name="offer_booked">Offer Booked</string>
    <string name="check_promocode">Check promocode</string>
    <string name="enter_promo_code">Enter your promocode</string>
    <string name="points">Points</string>
    <string name="delete">Delete</string>
    <string name="intro_1">browse and book hot offers</string>
    <string name="intro_2">you can book suitable time in seconds</string>
    <string name="intro_3">scan qr code and get points</string>
    <string name="intro_4">notifications with our latest offers</string>
    <string name="confirm_reservation">we will call you to confirm the booking\n booking number : </string>
    <string name="thank_you_for_using">Thank you for using Senorita</string>
    <string name="go_home">Go Home</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="show_location">Show Location</string>
    <string name="show_offers">Show Offers</string>
    <string name="time">times</string>
    <string name="message_type">Message Type</string>
    <string name="complaints">Complaints</string>
    <string name="proposals">Proposals</string>
    <string name="privacy_policy_accept">By login into app you accept <font color="#89182C"><u>privacy policy</u></font></string>
</resources>