<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/favorite_fragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/barcode_fragment"
        android:icon="@drawable/ic_barcode"
        android:title="@string/scan_barcode"/>

    <item
        android:id="@+id/notification_fragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications"/>

    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>

</menu>