<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="clickHandler"
            type="com.senoritasaudi.events.OnClickListener" />
    </data>

    <ScrollView
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            tools:context=".views.LoginActivity">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/progress_parent"
                android:visibility="gone"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:theme="@style/ProgressStyle" />

            </FrameLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:src="@drawable/im_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/jf_flat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_edit_text"
                android:drawableEnd="@drawable/ic_person"
                android:drawableRight="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:hint="@string/name"
                android:textAlignment="viewStart"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="15sp"
                app:fontFamily="@font/jf_flat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_edit_text"
                android:drawableEnd="@drawable/ic_email"
                android:drawableRight="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="15sp"
                app:fontFamily="@font/jf_flat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />


            <EditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_edit_text"
                android:drawableEnd="@drawable/ic_phone"
                android:drawableRight="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAlignment="viewStart"
                android:textSize="15sp"
                app:fontFamily="@font/jf_flat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_edit_text"
                android:drawableEnd="@drawable/ic_password"
                android:drawableRight="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAlignment="viewStart"
                android:textSize="15sp"
                app:fontFamily="@font/jf_flat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_edit_text"
                android:drawableEnd="@drawable/ic_password"
                android:drawableRight="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAlignment="viewStart"
                android:textSize="15sp"
                app:fontFamily="@font/jf_flat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/terms_and_coditions"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                app:fontFamily="@font/jf_flat"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText5" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.7dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="15dp"
                android:id="@+id/view"
                android:background="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />


            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/register"
                android:textAllCaps="false"
                android:onClick="@{v -> clickHandler.onClick(v)}"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                app:fontFamily="@font/jf_flat"
                app:layout_constraintEnd_toEndOf="@+id/editText2"
                app:layout_constraintStart_toStartOf="@+id/editText2"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/have_account"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:id="@+id/login_now"
                android:clickable="true"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                app:fontFamily="@font/jf_flat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/next_button"
                android:focusable="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>